--- a/home/styleHome.css
+++ b/home/styleHome.css
@@ -1,17 +1,39 @@
+.home-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 95vw;
+}
+
+.all-home-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 .home-button {
   width: 15vw;
   height: 8vh;
   padding: 0;
+  margin: .05em;
 }
 
-#us-div {
-  visibility: hidden;
-  background-color: blue;
+.inner-button-div {
   height: 100%;
   width: 100%;
   margin: 0;
+  transition: all .8s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #us-div:hover {
-  background-color: red;
+  background-image: url('https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/300px-Flag_of_the_United_States.svg.png');
+  opacity: 0.7;
+  background-size: cover;
+  background-position: center;
+  color: white;
 }
