--- a/home/styleHome.css
+++ b/home/styleHome.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 95vw;
+  width: 90vw;
 }
 
 .all-home-buttons {
@@ -36,4 +36,84 @@
   background-size: cover;
   background-position: center;
   color: white;
+}
+
+#ca-div:hover {
+  background-image: url('https://upload.wikimedia.org/wikipedia/en/thumb/c/cf/Flag_of_Canada.svg/1280px-Flag_of_Canada.svg.png');
+  opacity: 0.7;
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+#fi-div:hover {
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Flag_of_Finland.svg/255px-Flag_of_Finland.svg.png');
+  opacity: 0.7;
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+#de-div:hover {
+  background-image: url('https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png');
+  opacity: 0.7;
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+#gr-div:hover {
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Flag_of_Greece.svg/255px-Flag_of_Greece.svg.png');
+  opacity: 0.7;
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+#au-div:hover {
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Flag_of_Australia_(converted).svg/2000px-Flag_of_Australia_(converted).svg.png');
+  opacity: 0.7;
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+#es-div:hover {
+  background-image: url('https://upload.wikimedia.org/wikipedia/en/thumb/9/9a/Flag_of_Spain.svg/1280px-Flag_of_Spain.svg.png');
+  opacity: 0.7;
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+#it-div:hover {
+  background-image: url('https://upload.wikimedia.org/wikipedia/en/thumb/0/03/Flag_of_Italy.svg/640px-Flag_of_Italy.svg.png');
+  opacity: 0.7;
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+#pt-div:hover {
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Flag_of_Portugal.svg/255px-Flag_of_Portugal.svg.png');
+  opacity: 0.7;
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+#gb-div:hover {
+  background-image: url('https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/1280px-Flag_of_the_United_Kingdom.svg.png');
+  opacity: 0.7;
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+#nl-div:hover {
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/b/b2/Flag_of_the_Netherlands.png');
+  opacity: 0.7;
+  background-size: cover;
+  background-position: center;
+  /*color: white;*/
 }
