--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: aqua;
+  /*background-color: aqua;*/
 }
 
 #score {
   font-size: 2em;
   margin-left: 3vw;
-  color: red;
+  color: white;
 }
 
 #nav-icon {
@@ -21,9 +21,50 @@ header {
   /*display: none;*/
 }
 
+body {
+  padding: 0;
+  border: none;
+  margin: 0;
+}
+
+.video-background {
+  /*background-color: black;*/
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -100;
+}
+
+.fullscreen-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: auto;
+  min-width: 100%;
+  min-height: 100%;
+  -webkit-transform: translate(-50%, -50%);
+       -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+	    transform: translate(-50%, -50%);
+}
+
+@media (max-width: 767px) {
+  .video-background {
+    background-image: url('blakey_snapshot.png');
+  }
+
+  .fullscreen-video {
+    display: none;
+  }
+}
+
 /*Very possible that aligning content with only align the ui-view, not the content within the ui-view*/
 main{
-  background-color: red;
+  /*background-color: red;*/
   height: 90vh;
   width: 100vw;
   display: flex;
