Did basic styling through whole app.

--- a/end/styleEnd.css
+++ b/end/styleEnd.css
@@ -1,1 +1,10 @@
+.end-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
+#end-button {
+  margin-top: 5vh;
+}
