--- a/home/styleHome.css
+++ b/home/styleHome.css
@@ -1,9 +1,17 @@
 .home-screen {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;;
   align-items: center;
-  width: 90vw;
+  width: 75vw;
+  height: 50vh;
+}
+
+#intro-text {
+  margin: 5vh auto 5vh auto;
+  text-align: justify;
+  width: 40vw;
+  /*height: 15vh;*/
 }
 
 .all-home-buttons {
@@ -11,6 +19,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  /*height: 30vh;*/
 }
 
 .home-button {
@@ -18,6 +27,8 @@
   height: 8vh;
   padding: 0;
   margin: .05em;
+  background-color: #BFBFBF;
+  border-radius: 15px;
 }
 
 .inner-button-div {
@@ -35,7 +46,7 @@
   opacity: 0.7;
   background-size: cover;
   background-position: center;
-  color: white;
+  /*color: white;*/
 }
 
 #ca-div:hover {
@@ -43,7 +54,7 @@
   opacity: 0.7;
   background-size: cover;
   background-position: center;
-  color: white;
+  /*color: white;*/
 }
 
 #fi-div:hover {
@@ -51,7 +62,7 @@
   opacity: 0.7;
   background-size: cover;
   background-position: center;
-  color: white;
+  /*color: white;*/
 }
 
 #de-div:hover {
@@ -59,7 +70,7 @@
   opacity: 0.7;
   background-size: cover;
   background-position: center;
-  color: white;
+  /*color: white;*/
 }
 
 #gr-div:hover {
@@ -67,7 +78,7 @@
   opacity: 0.7;
   background-size: cover;
   background-position: center;
-  color: white;
+  /*color: white;*/
 }
 
 #au-div:hover {
@@ -75,7 +86,7 @@
   opacity: 0.7;
   background-size: cover;
   background-position: center;
-  color: white;
+  color: #EEEFEE;
 }
 
 #es-div:hover {
@@ -83,7 +94,7 @@
   opacity: 0.7;
   background-size: cover;
   background-position: center;
-  color: white;
+  /*color: white;*/
 }
 
 #it-div:hover {
@@ -91,7 +102,7 @@
   opacity: 0.7;
   background-size: cover;
   background-position: center;
-  color: white;
+  /*color: white;*/
 }
 
 #pt-div:hover {
@@ -99,7 +110,7 @@
   opacity: 0.7;
   background-size: cover;
   background-position: center;
-  color: white;
+  /*color: white;*/
 }
 
 #gb-div:hover {
@@ -107,7 +118,7 @@
   opacity: 0.7;
   background-size: cover;
   background-position: center;
-  color: white;
+  /*color: white;*/
 }
 
 #nl-div:hover {
