Having problems with Chrome responsive tool, gonna test it on mobile.

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,9 +1,10 @@
 h1 {
   font-family: 'Bilbo Swash Caps', cursive;
   font-size: 4em;
-  /*color: #C0C4BE;*/
+  color: #C0C4BE;
   /*color: #E4E5E4;*/
-  color: #E6E7E6;
+  /*color: #E6E7E6;*/
+  /*color: #9D9D9D;*/
 }
 
 p {
