--- a/game/styleGame.css
+++ b/game/styleGame.css
@@ -36,7 +36,7 @@
   padding: 0;
   /*margin: .05em;*/
   margin: auto;
-  background-color: #BFBFBF;
+  background-color: #9D9D9D;
   color: #EEEFEE;
   border-radius: 15px;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.5),
