--- a/home/styleHome.css
+++ b/home/styleHome.css
@@ -28,7 +28,7 @@
   padding: 0;
   /*margin: .05em;*/
   margin: .2em;
-  background-color: #BFBFBF;
+  background-color: #9D9D9D;
   color: #EEEFEE;
   border-radius: 15px;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.5),
