--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 p {
-  font-size: 1em;
+  font-size: 1em ;
 }
 
 div {
@@ -24,6 +24,10 @@ div {
 
 #lyrics {
   font-size: 1.5em;
+}
+
+.rules-text-center {
+  font-size: 1em;
 }
 
 /***BUTTONS***/
