--- a/game/styleGame.css
+++ b/game/styleGame.css
@@ -8,14 +8,26 @@
   align-items: center;
 }
 
-.lyrics {
-  width: 90vw;
-  min-height: 30vh;
-  padding: 1.5em;
+.lyrics-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #E6E7E6;
+  width: 90vw;
+  min-height: 30vh;
+  opacity: 0.7;
+  border-radius: 15px;
+  padding: 10px;
+  margin-right: auto;
+  margin-left: auto;  
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.5),
+              10px 10px 15px rgba(0,0,0,0.5),
+              -1px -1px 30px rgba(0,0,0,0.2);
+}
 
+#lyrics {
+  color: #121212;
+  opacity: 1;
 }
 
 .answer-div {
