--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -5,7 +5,7 @@
 }
 
 .fullscreen-video {
-  display: none !important;
+  display: none;
 }
 
 
@@ -22,6 +22,10 @@ div {
   font-size: .75em;
 }
 
+.lyrics-container {
+  width: 70vw;
+}
+
 #lyrics {
   font-size: 1.5em;
 }
@@ -33,8 +37,14 @@ div {
 /***BUTTONS***/
 
 .home-button {
-  width: 20vw !important;
+  width: 20vw;
   height: 11vh;
+}
+
+.all-home-buttons {
+  width: 90vw;
+  margin-right: 5vw;
+  margin-left: 5vw;
 }
 
 .answers {
