--- a/home/styleHome.css
+++ b/home/styleHome.css
@@ -23,17 +23,17 @@
 }
 
 .home-button {
-  width: 15vw;
+  /*width: 15vw;
   height: 8vh;
   padding: 0;
-  /*margin: .05em;*/
+  margin: .05em;
   margin: .2em;
   background-color: #9D9D9D;
   color: #EEEFEE;
   border-radius: 15px;
   box-shadow: 2px 2px 5px rgba(0,0,0,0.5),
               10px 10px 15px rgba(0,0,0,0.5),
-              -1px -1px 30px rgba(0,0,0,0.2);
+              -1px -1px 30px rgba(0,0,0,0.2);*/
 }
 
 .home-button:click {
