--- a/game/styleGame.css
+++ b/game/styleGame.css
@@ -8,6 +8,11 @@
   align-items: center;
 }
 
+.question-score-div {
+  display: flex;
+  justify-content: space-between;
+}
+
 .lyrics-container {
   display: flex;
   justify-content: center;
@@ -18,8 +23,8 @@
   opacity: 0.7;
   border-radius: 15px;
   padding: 10px;
-  margin-right: auto;
-  margin-left: auto;  
+  /*margin-right: auto;
+  margin-left: auto;*/
   box-shadow: 2px 2px 5px rgba(0,0,0,0.5),
               10px 10px 15px rgba(0,0,0,0.5),
               -1px -1px 30px rgba(0,0,0,0.2);
