--- a/home/styleHome.css
+++ b/home/styleHome.css
@@ -53,15 +53,15 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  background-color: rgba(53, 53, 53, 0.7);
+  /*background-color: rgba(53, 53, 53, 0.7);*/
   height: 50vh;
   min-width: 70vw;
   padding-top: 2.5vh;
   padding-bottom: 5vh;
   border-radius: 15px;
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.5),
+  /*box-shadow: 2px 2px 5px rgba(0,0,0,0.5),
               10px 10px 15px rgba(0,0,0,0.5),
-              -1px -1px 30px rgba(0,0,0,0.2);
+              -1px -1px 30px rgba(0,0,0,0.2);*/
 }
 .home-button {
   /*width: 15vw;
@@ -84,6 +84,8 @@
 }
 
 .inner-button-div {
+  /*font-size: 1.5em;*/
+  font-family: ;
   height: 100%;
   width: 100%;
   margin: 0;
