Right and wrong answer button animations complete.

--- a/styles/buttonBounce.css
+++ b/styles/buttonBounce.css
@@ -13,3 +13,17 @@
 @keyframse bounce {
   to { transform: scale(1.2); }
 }
+
+.lose {
+  background-color: red;
+  -webkit-animation: shrink .6s 2 alternate;
+  animation: shrink .6s 2 alternate;
+}
+
+@-webkit-keyframes shrink {
+  to { transform: scale(0.8); }
+}
+
+@keyframes shrink {
+  to { transform: scale(0.8); }
+}
