--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -15,6 +15,6 @@ p {
 
 button {
   font-size: 1.2em;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Roboto Slab', serif;
   font-weight: bolder;
 }
